@@ -92,9 +92,13 @@ public class RouteResourceTest {
                 putObject("graph.location", DIR).
                 // adding this so the corresponding check is not just skipped...
                 putObject(MAX_NON_CH_POINT_DISTANCE, 10e6).
-                putObject("graph.encoded_values", "road_class, surface, road_environment, max_speed, country, car_access, car_average_speed").
-                setProfiles(Collections.singletonList(TestProfiles.accessAndSpeed("my_car", "car"))).
-                setCHProfiles(Collections.singletonList(new CHProfile("my_car")));
+                putObject("routing.snap_preventions_default", "tunnel, bridge, ferry").
+                putObject("graph.encoded_values", "road_class, surface, road_environment, max_speed, country, " +
+                        "car_access, car_average_speed, " +
+                        "foot_access, foot_priority, foot_average_speed").
+                setProfiles(List.of(TestProfiles.accessAndSpeed("my_car", "car"),
+                        TestProfiles.accessSpeedAndPriority("foot"))).
+                setCHProfiles(List.of(new CHProfile("my_car"), new CHProfile("foot")));
         return config;
     }
 
@@ -385,17 +389,32 @@ public class RouteResourceTest {
     }
 
     @Test
-    public void testSnapPreventions() {
-        GraphHopperWeb hopper = new GraphHopperWeb(clientUrl(app, "route"));
-        GHRequest request = new GHRequest(42.511139, 1.53285, 42.508165, 1.532271);
-        request.setProfile("my_car");
-        GHResponse rsp = hopper.route(request);
-        assertFalse(rsp.hasErrors(), rsp.getErrors().toString());
-        assertEquals(490, rsp.getBest().getDistance(), 2);
+    public void testFootInstructionForReverseCarOnewayInRoundabout() {
+        JsonNode json = clientTarget(app, "/route?profile=foot&" +
+                "point=42.512263%2C1.535468&point=42.512938%2C1.534875").request().get(JsonNode.class);
+        JsonNode path = json.get("paths").get(0);
+        assertEquals(103, path.get("distance").asDouble(), 1);
+        JsonNode n = path.get("instructions").get(1);
+        assertEquals("At roundabout, take exit 1 onto Avigunda Sant Antoni, Avinguda Fiter i Rossell", n.get("text").asText());
+    }
 
-        request.setSnapPreventions(Collections.singletonList("tunnel"));
-        rsp = hopper.route(request);
-        assertEquals(1081, rsp.getBest().getDistance(), 2);
+    @Test
+    public void testSnapPreventions() {
+        for (boolean postRequest : List.of(true, false)) {
+            GraphHopperWeb hopper = new GraphHopperWeb(clientUrl(app, "route"));
+            hopper.setPostRequest(postRequest);
+            GHRequest request = new GHRequest(42.511139, 1.53285, 42.508165, 1.532271);
+            request.setProfile("my_car");
+            GHResponse rsp = hopper.route(request);
+            assertFalse(rsp.hasErrors(), rsp.getErrors().toString());
+            assertEquals(1081, rsp.getBest().getDistance(), 2, rsp.getBest().getDistance() + " with post " + postRequest);
+
+            // overwrite default:
+            request.setSnapPreventions(List.of());
+            rsp = hopper.route(request);
+            assertFalse(rsp.hasErrors(), rsp.getErrors().toString());
+            assertEquals(490, rsp.getBest().getDistance(), 2, rsp.getBest().getDistance() + " with post " + postRequest);
+        }
     }
 
     @Test
@@ -500,7 +519,7 @@ public class RouteResourceTest {
         assertTrue(ex instanceof IllegalArgumentException, "Wrong exception found: " + ex.getClass().getName()
                 + ", IllegalArgumentException expected.");
         assertTrue(ex.getMessage().contains("The requested profile 'SPACE-SHUTTLE' does not exist." +
-                "\nAvailable profiles: [my_car]"), ex.getMessage());
+                "\nAvailable profiles: [my_car, foot]"), ex.getMessage());
 
         // an IllegalArgumentException from inside the core is written as JSON, unknown profile
         response = getWithStatus(clientTarget(app, "/route?profile=SPACE-SHUTTLE&point=42.554851,1.536198&point=42.510071,1.548128"));
